--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/react-fontawesome": "^0.0.20",
-    "connected-react-router": "^6.5.2",
-    "css-loader": "^3.1.0",
-    "fsevents": "^2.0.7",
-    "history": "^4.9.0",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-beautiful-dnd": "^11.0.5",
-    "react-dom": "^16.4.1",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.39.1"
+    "@fortawesome/fontawesome-svg-core": "*",
+    "@fortawesome/free-regular-svg-icons": "*",
+    "@fortawesome/free-solid-svg-icons": "*",
+    "@fortawesome/react-fontawesome": "*",
+    "connected-react-router": "*",
+    "css-loader": "*",
+    "fsevents": "*",
+    "heroku-cli": "*",
+    "history": "*",
+    "node-sass": "*",
+    "postcss-loader": "*",
+    "prop-types": "*",
+    "react": "*",
+    "react-beautiful-dnd": "*",
+    "react-dom": "*",
+    "react-redux": "*",
+    "react-router": "*",
+    "react-router-dom": "*",
+    "react-router-redux": "*",
+    "react-scripts": "*",
+    "redux": "*",
+    "redux-thunk": "*",
+    "sass-loader": "*",
+    "typescript": "^3.5.3",
+    "webpack": "*"
   },
   "scripts": {
     "start": "react-scripts start",
