--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "astral-1",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.16.1",
+    "npm": "6.9.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "*",
     "@fortawesome/free-regular-svg-icons": "*",
